--- a/src/aau_waterlinked_sbl/package.xml
+++ b/src/aau_waterlinked_sbl/package.xml
@@ -9,6 +9,7 @@
   <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
+  <depend>python-requests</depend>
   <depend>dynamic_reconfigure</depend>
   <depend>message_generation</depend>
 </package>
